As a user I want a list of my transactions [Delivers #175031940]
